Change button font to fix Webkit layout issue
The split button icon became taller than the rest of the button once the
custom font had loaded.

--- a/app/frontend/scss/section/header.scss
+++ b/app/frontend/scss/section/header.scss
@@ -74,8 +74,7 @@ textarea {
     background: #e67e22;
     border: 1px solid transparent;
     color: #fff;
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     margin: 0;
     text-align: center;
 }
